<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="10dp"
        android:background="@color/colorPrimaryDark">

        <ImageButton
            android:id="@+id/btnVoltar"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:backgroundTint="#00FFFFFF"
            android:src="@drawable/ic_voltar_55dp"
            android:tint="@color/preto" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:src="@drawable/ic_add_55dp"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/btnPerfil"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:backgroundTint="#00FFFFFF"

            android:src="@drawable/ic_add_55dp"
            tools:visibility="visible" />

    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvIdUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/imvImagem"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_perfil_55dp" />

            <TextView
                android:id="@+id/tvNomeExibido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nome"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tvEmailExibido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTelefone1Exibido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/telefone1"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTelefone2Exibido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/telefone2"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnEditar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:text="@string/editar"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSairConta"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="#00FFFFFF"
                android:text="@string/sair_usuario"
                android:textColor="#37C5FD"
                android:textSize="18sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/btnApagarConta"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="#00FFFFFF"
                android:text="@string/apagar_usuario"
                android:textColor="#37C5FD"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>