<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastrarAnimalActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="10dp"
        android:background="@color/colorPrimaryDark">

        <ImageButton
            android:id="@+id/btnVoltar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:backgroundTint="#00FFFFFF"
            android:src="@drawable/ic_voltar_55dp" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:layout_marginLeft="220dp"
            android:backgroundTint="#00FFFFFF"
            android:src="@drawable/ic_perfil_55dp"
            tools:visibility="visible" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tbIdAnimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="20sp"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/imvFoto"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:elevation="1dp"
                android:src="@drawable/ic_perfil_55dp" />

            <ImageButton
                android:id="@+id/btnAddFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FCFCFC"
                android:src="@drawable/ic_add_foto_55dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinnerTipo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:entries="@array/tipospinner"
                    android:spinnerMode="dialog"
                    android:textSize="20sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/edtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:hint="@string/nome"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edtDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:gravity="start|top"
                android:hint="@string/descricao"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sexo"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioBtnMacho"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/macho"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/radioBtnFemea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/femea"
                        android:textSize="20sp" />
                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_nascimento"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edtDataNascimento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="DD/MM/AAAA"
                    android:inputType="date"
                    android:textSize="20sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/edtCidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:hint="@string/cidade"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btnProximo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="#FFDD00"
                android:text="@string/proximo" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>