<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarPerfilActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:elevation="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnVoltar"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:backgroundTint="#00FFFFFF"
            android:src="@drawable/ic_voltar_55dp"
            android:tint="@color/preto"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:src="@drawable/ic_add_55dp"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/btnPerfil"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:backgroundTint="#00FFFFFF"
            android:src="@drawable/ic_add_55dp"
            android:visibility="invisible" />

    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvIdUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/imvImagem"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_mood_55dp" />

            <ImageButton
                android:id="@+id/btnAddFoto"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:alpha=".7"
                android:backgroundTint="#00000000"
                android:src="@drawable/ic_add_foto_55dp" />

            <EditText
                android:id="@+id/edtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:hint="@string/nome"
                android:inputType="textPersonName"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/edtTelefone1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/telefone1"
                android:inputType="phone"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtTelefone2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/telefone2"
                android:inputType="phone"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layoutBotao"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSalvar"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/verdeCinza"
                    android:text="@string/salvar"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#BEDB0303"
                    android:text="@string/cancelar"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>